5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1662_1391.log
== TEST (2019-04-15 14:11:12) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

vc = c1*kw+il
if(kw=="0")
   print(round(vc,2))
-- ERROR:
File "XXXX", line 6
    if(kw=="0")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:11:18) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

vc = c1*kw+il
if(kw==0)
   print(round(vc,2))
-- ERROR:
File "XXXX", line 6
    if(kw==0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:11:31) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

vc = c1*kw+il
if(vc==0)
   print(round(vc,2))
-- ERROR:
File "XXXX", line 6
    if(vc==0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:11:43) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

vc = c1*kw+il
if(c1==0)
   print(round(vc,2))
-- ERROR:
File "XXXX", line 6
    if(c1==0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:12:14) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

vc = c1*kw+il
if(vc>0)
   print(round(vc,2))
-- ERROR:
File "XXXX", line 6
    if(vc>0)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:12:25) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

vc = c1*kw+il
if(kw>0)
   print(round(vc,2))
-- ERROR:
File "XXXX", line 6
    if(kw>0)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:01) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

v = c1*kw+il
   print(round(v,2))
-- ERROR:
File "XXXX", line 6
    print(round(v,2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:11) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

v = c1*kw+il

print(round(v,2))
-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:13:16) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

v = c1*kw+il

print(round(v,2))
-- EXECUTION TIME:
0.125616
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
122.5
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:23) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

v = c1*kw+il

print(round(v,2))
-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:13:29) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

v = c1*kw+il

print(round(v,2))
-- EXECUTION TIME:
0.18181
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
122.5
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:51) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

v = (c1*kw+il)

print(round(v,2))
-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:13:57) 
-- CODE:
c1=int(input("consumo: "))
kw = 0.75
il = 16

v = (c1*kw+il)

print(round(v,2))
-- EXECUTION TIME:
0.144345
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
122.5
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:14:54) 
-- CODE:
c1=float(input("consumo: "))
kw = 0.75
il = 16

v = c1 * kw + il

print(round(v,2))
-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:15:00) 
-- CODE:
c1=float(input("consumo: "))
kw = 0.75
il = 16

v = c1 * kw + il

print(round(v,2))
-- EXECUTION TIME:
0.209513
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
122.5
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:15) 
-- CODE:
c1=float(input("consumo: "))
kw = 0.75
il = 16

v = c1 * kw + il

print(v)
-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:15:19) 
-- CODE:
c1=float(input("consumo: "))
kw = 0.75
il = 16

v = c1 * kw + il

print(v)
-- EXECUTION TIME:
0.131942
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
122.5
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:19:31) 
-- CODE:
c1=float(input("consumo: "))
kw = 0.75
il = 16

v = c1 * kw + il

print(v)
-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:19:38) 
-- CODE:
c1=float(input("consumo: "))
kw = 0.75
il = 16

v = c1 * kw + il

print(v)
-- EXECUTION TIME:
0.138315
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
122.5
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:24:39) 
-- CODE:
c1=float(input("consumo: "))
kw1 = 0.60
il = 5
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v1 = c1 * kw1 + il1
v2 = c2 * kw2 + il2

if(v2>0):
	pŕint(round(v2,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:25:04) 
-- CODE:
c1=float(input("consumo: "))
kw1 = 0.60
il1 = 5
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v1 = c1 * kw1 + il1
v2 = c2 * kw2 + il2

if(v2>0):
	pŕint(round(v2,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:25:31) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2

if(v2>0):
	pŕint(round(v2,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    pŕint(round(v2,2))
NameError: name 'pŕint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:25:43) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2

if(v2>0):
	print(round(v2,2))

-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:25:47) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2

if(v2>0):
	print(round(v2,2))

-- EXECUTION TIME:
0.151976
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
122.5
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:45) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2

if(v2>0):
	print(round(v2,2))

-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:27:49) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2

if(v2>0):
	print(round(v2,2))

-- EXECUTION TIME:
0.137539
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
122.5
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:31:25) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2
if(v2>0):
	print(round(v2,2))


-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:31:33) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2
if(v2>0):
	print(round(v2,2))


-- EXECUTION TIME:
0.210359
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
122.5
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:31:53) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2
if( v2 > 0 ):
	print(round(v2,2))


-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:31:58) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2
if( v2 > 0 ):
	print(round(v2,2))


-- EXECUTION TIME:
0.173953
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
122.5
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:48:01) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2
if(v2>0):
	print(round(v2,2))


-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:51:40) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2
if(v2>0):
	print(round(v2,2))


-- EXECUTION TIME:
0.210094
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
122.5
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:52:08) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2
if(v2>0):
	print(round(v2,2))
else:
	print("real")


-- OUTPUT:
122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:52:14) 
-- CODE:
c2=float(input("consumo: "))
kw2 = 0.75
il2 = 16

v2 = c2 * kw2 + il2
if(v2>0):
	print(round(v2,2))
else:
	print("real")


-- EXECUTION TIME:
0.142054
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
122.5
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
